# aoc

./: .gitignore  README.md  generateReadme.fsx
2015/aoc-2015-fs/: .gitignore  Day01.fs  Day01.fsx  Day02.fs  Day02.fsx  Day03.fs  Day03.fsx  Day04.fs  Day04.fsx  Day05.fs  Day05.fsx  Day06.fs  Day06.fsx  Day07.fs  Day07.fsx  Day08.fs  Day08.fsx  Day09.fs  Day09.fsx  Day10.fs  Day10.fsx  Day11.fs  Day11.fsx  Day12.fs  Day12.fsx  Day13.fs  Day13.fsx  Day14.fs  Day14.fsx  Day15.fs  Day15.fsx  Day16.fs  Day16.fsx  Day17.fs  Day17.fsx  Day18.fs  Day18.fsx  Day19.fs  Day19.fsx  Day20.fs  (+14 more)
2015/aoc-2015-lean/: .gitignore  Main.lean  README.md
2015/aoc-2015-nim/: .gitignore  README.md  day01.nim  day02.nim
2016/aoc-2016-fs/: Day01.fs  Day01.fsx  Day02.fsx  Day03.fsx  Day04.fsx  Day05.fsx  Day06.fs  Day06.fsx  Day07.fs  Day07.fsx  Day08.fs  Day08.fsx  Day09.fs  Day09.fsx  Day10.fs  Day11.fs  Day12.fs  Day13.fs  Day14.fs  Day15.fs  Day16.fs  Day17.fs  Day18.fs  Day19.fs  Day20.fs  Day21.fs  Day22.fs  Day23.fs  Day24.fs  Day25.fs  Main.fs  README.md
2017/aoc-2017-cl/: README.md
2019/aoc-2019-hs/: AdventOfCode.cabal  README.md
2019/aoc-2019-hs/src/: Day01A.hs  Day01B.hs  Day02A.hs  Day02B.hs  Day03A.hs  Day03B.hs  Day04A.hs  Day04B.hs  Day05A.hs  Day05B.hs  Day06A.hs  Day06B.hs  Day07A.hs  Day07B.hs  Day08A.hs  Day08B.hs  Day10A.hs  Day10B.hs  Day12A.hs  Day14A.hs  Main.hs
2020/aoc-2020-hs/: .gitignore
2022/aoc-2022-cl/: .gitignore  aoc-2022-cl.asd
2022/aoc-2022-clj/: .gitignore  project.clj
2022/aoc-2022-fs/: .gitignore  Day01.fs  Day02.fs  Day03.fs  Day04.fs  (+18 more)
(+124 files in other folders)
