name:                AdventOfCode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mark-gerarts/AdventOfCode#readme
author:              Mark Gerarts
maintainer:          mark.gerarts@gmail.com
copyright:           2020 Mark Gerarts
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable AdventOfCode
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       split,
                       regex-tdfa
  other-modules:       Day01A,
                       Day01B,
                       Day02A,
                       Day02B,
                       Day03A,
                       Day03B,
                       Day04A,
                       Day04B,
                       Day05A,
                       Day05B,
                       Day06A,
                       Day06B,
                       Day07A,
                       Day07B,
                       Day08A,
                       Day08B,
                       Day10A,
                       Day10B,
                       Day12A,
                       Day14A
